# tcup

./: .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: pull-request.yaml
src/tcup/: __init__.py  cli.py  numpyro.py  preprocess.py  priors.py  report.py  scale.py  utils.py  validation.py
src/tcup/stan/: model.py
tests/: test_numpyro.py  test_preprocess.py  test_report.py  test_scale.py  test_stan.py  test_tcup.py  test_utils.py  test_validation.py
