[project]
name = "tcup"
version = "0.7.1"
description = "Robust Bayesian regression with measurement error"
authors = [{ name = "William Martin", email = "30499074+wm1995@users.noreply.github.com" }]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "arviz>=0.19.0",
    "jax>=0.4.23",
    "numpy>=1.26.3",
    "numpyro>=0.13.2",
    "tensorflow-probability[jax]>=0.19.0",
    "scikit-learn>=1.5.1",
    "astroml>=1.0.2.post1",
    "astropy>=6.1.2",
    "astropy-iers-data>=0.2024.7.22.0.34.13",
    "pyerfa>=2.0.1.4",
]

[project.optional-dependencies]
stan = [
    "jinja2>=3.1.2,<4",
    "pystan>=3.6.0,<4",
]

[dependency-groups]
dev = [
    "ruff>=0.5.4,<0.6",
    "pytest>=7.2.0,<8",
    "pre-commit>=3.7.1,<4",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/tcup",
    "src/XDGMM/xdgmm",
]

[tool.hatch.build.targets.wheel]
include = [
    "src/tcup",
    "src/XDGMM/xdgmm",
]

[tool.hatch.build.targets.wheel.sources]
"src/XDGMM/xdgmm" = "xdgmm"
"src/tcup" = "tcup"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["B", "E", "F", "I", "W"]
ignore = ["B028"]
fixable = ["ALL"]
